src/main/java/Plugin/antlr4/GrammarParser.java
package Plugin.antlr4;// Generated from ./Grammar.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, START_REFERENCE=4, END_REFERENCE=5, START_TYPE=6, 
		END_TYPE=7, START_ANSWER=8, END_ANSWER=9, START_REQUIREMENT=10, END_REQUIREMENT=11, 
		START_REQUIREMENT_BODY=12, END_REQUIREMENT_BODY=13, STRING=14, NUMBER=15, 
		REAL_NUMBER=16, INTEGER=17, DATE=18, TIME=19, SCALE=20, BOOLEAN=21, WS=22, 
		COMMENT=23;
	public static final int
		RULE_start = 0, RULE_requirement = 1, RULE_jobOpeningReference = 2, RULE_body = 3, 
		RULE_requirementAnswer = 4, RULE_minimumRequirement = 5, RULE_specificRequirement = 6;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "requirement", "jobOpeningReference", "body", "requirementAnswer", 
			"minimumRequirement", "specificRequirement"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "'minimum'", "'specific'", "'@start-reference@'", "'@end-reference@'", 
			"'@start-type@'", "'@end-type@'", "'@start-answer@'", "'@end-answer@'", 
			"'@start-requirement@'", "'@end-requirement@'", "'@start-requirement-body@'", 
			"'@end-requirement-body@'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, "START_REFERENCE", "END_REFERENCE", "START_TYPE", 
			"END_TYPE", "START_ANSWER", "END_ANSWER", "START_REQUIREMENT", "END_REQUIREMENT", 
			"START_REQUIREMENT_BODY", "END_REQUIREMENT_BODY", "STRING", "NUMBER", 
			"REAL_NUMBER", "INTEGER", "DATE", "TIME", "SCALE", "BOOLEAN", "WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public JobOpeningReferenceContext jobOpeningReference() {
			return getRuleContext(JobOpeningReferenceContext.class,0);
		}
		public List<RequirementContext> requirement() {
			return getRuleContexts(RequirementContext.class);
		}
		public RequirementContext requirement(int i) {
			return getRuleContext(RequirementContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(14);
			jobOpeningReference();
			setState(16); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(15);
				requirement();
				}
				}
				setState(18); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==START_REQUIREMENT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RequirementContext extends ParserRuleContext {
		public TerminalNode START_REQUIREMENT() { return getToken(GrammarParser.START_REQUIREMENT, 0); }
		public TerminalNode END_REQUIREMENT() { return getToken(GrammarParser.END_REQUIREMENT, 0); }
		public SpecificRequirementContext specificRequirement() {
			return getRuleContext(SpecificRequirementContext.class,0);
		}
		public MinimumRequirementContext minimumRequirement() {
			return getRuleContext(MinimumRequirementContext.class,0);
		}
		public RequirementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_requirement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterRequirement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitRequirement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitRequirement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RequirementContext requirement() throws RecognitionException {
		RequirementContext _localctx = new RequirementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_requirement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(20);
			match(START_REQUIREMENT);
			setState(23);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(21);
				specificRequirement();
				}
				break;
			case 2:
				{
				setState(22);
				minimumRequirement();
				}
				break;
			}
			setState(25);
			match(END_REQUIREMENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JobOpeningReferenceContext extends ParserRuleContext {
		public TerminalNode START_REFERENCE() { return getToken(GrammarParser.START_REFERENCE, 0); }
		public TerminalNode STRING() { return getToken(GrammarParser.STRING, 0); }
		public TerminalNode END_REFERENCE() { return getToken(GrammarParser.END_REFERENCE, 0); }
		public JobOpeningReferenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jobOpeningReference; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterJobOpeningReference(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitJobOpeningReference(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitJobOpeningReference(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JobOpeningReferenceContext jobOpeningReference() throws RecognitionException {
		JobOpeningReferenceContext _localctx = new JobOpeningReferenceContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_jobOpeningReference);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(27);
			match(START_REFERENCE);
			setState(28);
			match(STRING);
			setState(29);
			match(END_REFERENCE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BodyContext extends ParserRuleContext {
		public TerminalNode START_REQUIREMENT_BODY() { return getToken(GrammarParser.START_REQUIREMENT_BODY, 0); }
		public TerminalNode STRING() { return getToken(GrammarParser.STRING, 0); }
		public TerminalNode END_REQUIREMENT_BODY() { return getToken(GrammarParser.END_REQUIREMENT_BODY, 0); }
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_body);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(31);
			match(START_REQUIREMENT_BODY);
			setState(32);
			match(STRING);
			setState(33);
			match(END_REQUIREMENT_BODY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RequirementAnswerContext extends ParserRuleContext {
		public TerminalNode START_ANSWER() { return getToken(GrammarParser.START_ANSWER, 0); }
		public TerminalNode END_ANSWER() { return getToken(GrammarParser.END_ANSWER, 0); }
		public List<TerminalNode> NUMBER() { return getTokens(GrammarParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(GrammarParser.NUMBER, i);
		}
		public List<TerminalNode> STRING() { return getTokens(GrammarParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(GrammarParser.STRING, i);
		}
		public RequirementAnswerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_requirementAnswer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterRequirementAnswer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitRequirementAnswer(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitRequirementAnswer(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RequirementAnswerContext requirementAnswer() throws RecognitionException {
		RequirementAnswerContext _localctx = new RequirementAnswerContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_requirementAnswer);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			match(START_ANSWER);
			setState(52);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMBER:
				{
				setState(36);
				match(NUMBER);
				setState(41);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(37);
					match(T__0);
					setState(38);
					match(NUMBER);
					}
					}
					setState(43);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case STRING:
				{
				setState(44);
				match(STRING);
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(45);
					match(T__0);
					setState(46);
					match(STRING);
					}
					}
					setState(51);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(54);
			match(END_ANSWER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MinimumRequirementContext extends ParserRuleContext {
		public TerminalNode START_TYPE() { return getToken(GrammarParser.START_TYPE, 0); }
		public TerminalNode END_TYPE() { return getToken(GrammarParser.END_TYPE, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public RequirementAnswerContext requirementAnswer() {
			return getRuleContext(RequirementAnswerContext.class,0);
		}
		public MinimumRequirementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_minimumRequirement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterMinimumRequirement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitMinimumRequirement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitMinimumRequirement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MinimumRequirementContext minimumRequirement() throws RecognitionException {
		MinimumRequirementContext _localctx = new MinimumRequirementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_minimumRequirement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(START_TYPE);
			setState(57);
			match(T__1);
			setState(58);
			match(END_TYPE);
			setState(59);
			body();
			setState(60);
			requirementAnswer();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SpecificRequirementContext extends ParserRuleContext {
		public TerminalNode START_TYPE() { return getToken(GrammarParser.START_TYPE, 0); }
		public TerminalNode END_TYPE() { return getToken(GrammarParser.END_TYPE, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public RequirementAnswerContext requirementAnswer() {
			return getRuleContext(RequirementAnswerContext.class,0);
		}
		public SpecificRequirementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_specificRequirement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterSpecificRequirement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitSpecificRequirement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitSpecificRequirement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SpecificRequirementContext specificRequirement() throws RecognitionException {
		SpecificRequirementContext _localctx = new SpecificRequirementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_specificRequirement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(START_TYPE);
			setState(63);
			match(T__2);
			setState(64);
			match(END_TYPE);
			setState(65);
			body();
			setState(66);
			requirementAnswer();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}